# amos-try

./: .directory  .gitignore  CMakeLists.txt  bessel_j.py  install-FiNeR.sh
FiNeR/: CMakeLists.txt
SMARTIES_v1_01/: Erratum_v1_01.txt  InitPath.m
SMARTIES_v1_01/HighLevel/: sphEstimateN.m  sphEstimateNandNT.m  sphEstimateNbTheta.m
SMARTIES_v1_01/Materials/: epsSi.m
SMARTIES_v1_01/Postprocessing/: pstGetNearField.m  pstScatteringMatrixOA.m
SMARTIES_v1_01/Scripts/: ScriptSolveForFixedSpectrum.m  ScriptSolveForSurfaceField.m  ScriptSolveForSurfaceFieldSpectrum.m  ScriptSolveForT.m  ScriptSolveForTSpectrum.m  ScriptTutorial.m  ScriptTutorialSpectrum.m
SMARTIES_v1_01/Scripts/MatlabOutput/: ScriptSolveForT.html
SMARTIES_v1_01/Scripts/OctaveOutput/: ScriptSolveForFixed.html  ScriptSolveForFixedSpectrum.html  ScriptSolveForNearField.html  ScriptSolveForNearFieldSpectrum.html  ScriptSolveForT.html  ScriptSolveForTSpectrum.html  ScriptTutorial.html  ScriptTutorialSpectrum.html
SMARTIES_v1_01/Solve/: slvForSurfaceField.m  slvForSurfaceFieldSpectrum.m
SMARTIES_v1_01/Utils/: exportTmatrix.m  storeGLquadrature.m  updateGLquadrature.m
amos/: .directory  .gitignore  CMakeLists.txt  amos.f90
amos/lib/cmake/amos/: amosConfig.cmake  amosTargets.cmake
amos/src/lib/: CMakeLists.txt
cylinder2mod/: .directory  CMakeLists.txt  ampld.par.f  amplq.lp.f90  axspartclnew4.f  axspartclnew4.f90  beschb.f  biga.f  chebev.f  constants.f90  convert-f77-f90.py  cylinder-bic.ini  cylinder_blas.f90  default.ini  gnricbessh.f  gnzbess.f  lib_adaptive_integration.f90  libcylinder.f90  maps.txt  model_parameters.f90  plot-ext.py  rsp-plot.py  run-test.sh  smarties_plot_ext.py  smarties_script_tutorial.ini  sordalc.f  special_functions.f90  test-adaptive-integration.ini  test-ovidio.ini  tmtaxsp1.f  tmtaxsp1.f90
erf_MIT/: CMakeLists.txt
erf_MIT/lib/cmake/errfun/: errfunTargets.cmake
errfun/: CMakeLists.txt  LICENSE  Makefile  Makefile-FreeBSD  Makefile-ifort  README  errfun.f90  errtest.f90
errfun_MIT/: CMakeLists.txt
errfun_MIT/lib/cmake/errfun/: errfunConfig.cmake  errfunTargets.cmake
errfun_MIT/src/lib/: CMakeLists.txt  Faddeeva.cc  errfun.f90
errfun_test/: CMakeLists.txt  errfun_test.f90  test.py
lapack_wrapper/: CMakeLists.txt  dense_solve.f90
lapack_wrapper/lib/cmake/dense_solve/: dense_solveConfig.cmake  dense_solveTargets.cmake
lapack_wrapper/src/lib/: CMakeLists.txt
mishchenko_dp_fixed_particles/: CMakeLists.txt  ampl  ampld.lp.f  libampl.f90
multem2mod/: .directory  BIC_pinning_figures.py  CMakeLists.txt  DOI_10_1103_PhysRevB_95_195406_comparison.py  PRL_bic_pinning_figures.py  PhysRevB_comparison.py  TR_spectra_multipole_test.py  TR_spectra_multipole_test_KTYPE2.py  TR_spectra_plot_multipoles.py  TR_spectra_plot_multipoles_edited_by_Konstantin.py  TR_test.py  ak-test.py  bessel_switch.f  bic_multipole_analysis.py  circle-BIC-spectra-plot.py  go.sh  input2_band.txt  input_inoue.txt  libmultem2b.f90  lorentz_test.py  multem_blas.f90  multem_mod.f  multem_mod.f90  multipole_regime_parameters.f90  multipole_regime_parameters.ini  plot_band.py  r=f(kx,ky).py  run-test.sh  sadrieva2019.py  spectra_plot.py  supplemental.py  tmtrx_test.f90
multem2mod/examples/: field-Ag-flow-Egor.py
multem2mod/examples/multipole_expansion_verification/: DOI_10_1103_PhysRevB_95_195406_comparison.py  run_multipole_expansion_test.sh
multem2mod/multipole_expansion_verification/: DOI_10_1103_PhysRevB_95_195406_comparison.py  run_multipole_expansion_test.sh
multem2orig/: CMakeLists.txt  circle-BIC-spectra-plot.py  multem.f  multem1.f  multem_mod.f
python-tmatrix-0.1.1/: MANIFEST.in  PKG-INFO  setup.py
python-tmatrix-0.1.1/src/: #ampld.lp.f#  ampld.lp.f  bisphere.f  lpd.f  scsmfo1b.f  scsmtm1.f  tmbisphere.pyf  tmd.lp.f  tmd.par.f  tmfixed.pyf  tmnsdim.f  tmnsfixed.pyf  tmnsrandom.pyf  tmrandom.pyf
python-tmatrix-0.1.1/tests/: nsr_test.py  test.py
python-tmatrix-0.1.1/tmatrix/: __init__.py  tmatrix.py
quadpack/: CMakeLists.txt
quadpack/lib/cmake/quadpack/: quadpackConfig.cmake  quadpackTargets.cmake
quadpack/src/lib/: CMakeLists.txt
quadpack/src/tests/: CMakeLists.txt  quadpack_double_prb.f90  quadpack_test
read-nk/: CMakeLists.txt
read-nk/lib/cmake/readnk/: readnkConfig.cmake  readnkTargets.cmake
read-nk/src/lib/: CMakeLists.txt  libreadnk.f90  pchip.f90
read-nk/src/tests/: CMakeLists.txt  pchip_prb.f90  plot-index.py  readnk_test  readnk_test.f90
try-zbesj/: CMakeLists.txt  test-besj.f  test_besselj.f90
